examples/test/testpolicy15227.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15227
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key37: value32
      key24: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value33
      podSelector:
        matchLabels:
          key26: value0
          key36: value48
